Reading View added. Layout modified. Dummy activities for AirSpeck and RESpeck added.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,7 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AirSpeckActivity"></activity>
+        <activity android:name=".airspeck.AirSpeckActivity" />
+        <activity android:name=".respeck.RESpeckActivity"></activity>
     </application>
 
-</manifest>
+</manifest> <!-- android:screenOrientation="portrait" -->
