ReadingView: drawing elements positioning modified. Settings activity added.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,7 +20,15 @@
             </intent-filter>
         </activity>
         <activity android:name=".airspeck.AirSpeckActivity" />
-        <activity android:name=".respeck.RESpeckActivity"></activity>
+        <activity android:name=".respeck.RESpeckActivity" />
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.specknet.airrespeck.MainActivity" />
+        </activity>
     </application>
 
-</manifest> <!-- android:screenOrientation="portrait" -->
+</manifest>
