--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
+
     defaultConfig {
         applicationId "com.specknet.airrespeck"
         minSdkVersion 22
@@ -10,13 +11,19 @@ android {
         versionCode 1
         versionName "1.0"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
     productFlavors {
+        live {
+            applicationId 'com.sottocorp.okhttpvolleygson'
+            buildConfigField 'String', 'apiDomainName', '"http://www.mocky.io"'
+        }
     }
 }
 
@@ -27,5 +34,6 @@ dependencies {
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
+
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.0-beta1'
 }
