--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,10 +20,6 @@ android {
     }
 
     productFlavors {
-        live {
-            applicationId 'com.sottocorp.okhttpvolleygson'
-            buildConfigField 'String', 'apiDomainName', '"http://www.mocky.io"'
-        }
     }
 }
 
@@ -35,5 +31,17 @@ dependencies {
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
 
+    // Retrofit REST client
+    compile 'com.google.code.gson:gson:2.6.2'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+
+    // Active Android SQLite lib
+    compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
+
+    // Chart graphs
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.0-beta1'
+
+    // FloatLabeledEditText
+    compile 'com.nineoldandroids:library:2.4.0'
 }
