--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:screenOrientation="portrait">
         <meta-data
             android:name="AA_DB_NAME"
             android:value="AirRespeck.db" />
@@ -63,4 +64,4 @@
         </activity>
     </application>
 
-</manifest> <!-- android:screenOrientation="portrait" -->
+</manifest>
