--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,28 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.specknet.airrespeck.activities.MainActivity" />
         </activity>
+
+        <service
+            android:name="com.specknet.airrespeck.respeckuploadservice.RespeckRemoteUploadService"
+            android:enabled="true"
+            android:exported="true"
+            android:process=":upload_process">
+            <intent-filter>
+                <action android:name="com.specknet.airrespeck.respeckuploadservice.RespeckRemoteUploadService">
+                </action>
+            </intent-filter>
+        </service>
+
+        <service
+            android:name="com.specknet.airrespeck.qoeuploadservice.QOERemoteUploadService"
+            android:enabled="true"
+            android:exported="true"
+            android:process=":upload_process">
+            <intent-filter>
+                <action android:name="com.specknet.airrespeck.qoeuploadservice.QOERemoteUploadService">
+                </action>
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
