The UI is setup based on user type and age. Buttons padding added.

--- a/app/src/main/assets/config.properties
+++ b/app/src/main/assets/config.properties
@@ -1,1 +1,16 @@
 # Configuration File
+
+# Age groups:
+# - Adolescents:        12 - 18
+# - Young adults:       19 - 39
+# - Middle-aged adults: 40 - 59
+# - Elderly adults:     60 - up
+
+adolescent_min=12
+adolescent_max=18
+young_adult_min=19
+young_adult_max=39
+middleaged_adult_min=40
+middleaged_adult_max=59
+elderly_adult_min=60
+elderly_adult_max=999
