--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.specknet.airrespeck"
         minSdkVersion 22
         targetSdkVersion 23
-        versionCode 9
-        versionName "1.2"
+        versionCode 10
+        versionName "1.3"
 
         // Enabling multidex support.
         multiDexEnabled true
@@ -31,6 +31,10 @@ android {
     }
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
+    }
+
+    lintOptions{
+        abortOnError false
     }
 }
 
