Switched back to String constants instead of ints, as that resulted in a parsing error in the listpreference. Design of Daphne homepage done, without functionality

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,9 @@ android {
         ndk {
             moduleName "respeck-jni"
         }
+        ndk {
+            moduleName "respeck-jni-daphne"
+        }
     }
 
     buildTypes {
