--- a/gradle.properties
+++ b/gradle.properties
@@ -13,4 +13,4 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Thu Jul 28 16:01:36 BST 2016
-android.useDeprecatedNdk=true
+# android.useDeprecatedNdk=true
