Settings added to enable/disable specific views in app. Refactoring of fragments into a more logical system.

--- a/RESpeck.config
+++ b/RESpeck.config
@@ -1,7 +1,16 @@
-RESpeckUUID=C9:E6:47:57:B7:37
-QoEUUID=FC:A6:33:A2:A4:5A
-RESpeckKey=WdpPzBYN9GvDFynP4t6QjzpudTLyfLe9vkXSngQ8
-PatientID=150
-TabletSerial=R52G31Q79WY
-PatientAge=20
-UserType=1
+TabletSerial=Q8G12151102353
+RESpeckKey=hbNNpYX6e4WZ5PWgfXrpd8Tz8D6VmFDjCc2wYcy2
+PatientID=1
+PatientAge=23
+UserType=0
+IsSupervisedStartingMode=true
+EnableSupervisedMode=true
+EnableSubjectMode=true
+EnableAirspeck=false
+EnableSupervisedOverview=false
+EnableSupervisedBreathingGraphs=true
+EnableSupervisedAllGraphs=true
+EnableSupervisedActivitySummary=true
+EnableSupervisedRESpeckReadings=true
+EnableSupervisedAirspeckReadings=true
+ShowPCAGraph=false
