--- a/RESpeck.config
+++ b/RESpeck.config
@@ -1,16 +1,31 @@
 TabletSerial=Q8G12151102353
 RESpeckKey=hbNNpYX6e4WZ5PWgfXrpd8Tz8D6VmFDjCc2wYcy2
 PatientID=1
+
+# This is ignored in current version. Was used to adjust the type display for the readings.
 PatientAge=23
+
+# 0 is Researcher, 1 is subject. This is ignored in current version.
 UserType=0
+
+# Which mode to show first. If only one mode is enabled, that one is shown, independent of this value.
 IsSupervisedStartingMode=true
+
+# Whether supervised mode and subject mode are enabled. One of the two has to be enabled.
 EnableSupervisedMode=true
-EnableSubjectMode=true
+EnableSubjectMode=false
+
+# If Airspeck is disabled, this disables the bluetooth search for the Airspeck and all Airspeck 
+# related Fragments, independent of the values set below. 
 EnableAirspeck=false
+
+# Enable/disable specific fragments (views)
 EnableSupervisedOverview=false
 EnableSupervisedBreathingGraphs=true
-EnableSupervisedAllGraphs=true
-EnableSupervisedActivitySummary=true
+EnableSupervisedAQGraphs=false
+EnableSupervisedActivitySummary=false
 EnableSupervisedRESpeckReadings=true
 EnableSupervisedAirspeckReadings=true
+
+# Whether the PCA graphs should be displayed in addition to the flow graph
 ShowPCAGraph=false
