Options for storing data locally, including a merged file with RESpeck and Airspeck data.

--- a/RESpeck.config
+++ b/RESpeck.config
@@ -8,6 +8,16 @@ PatientAge=23
 # 0 is Researcher, 1 is subject. This is ignored in current version.
 UserType=0
 
+# Upload data to server?
+UploadToServer=false
+
+# Store data locally?
+StoreDataLocally=true
+
+# Store Airspeck data and RESpeck data in a merged file in addition to the individual files? Only works
+# if Airspeck is enabled
+StoreMergedFile=true
+
 # Which mode to show first. If only one mode is enabled, that one is shown, independent of this value.
 IsSupervisedStartingMode=true
 
@@ -27,5 +37,5 @@ EnableSupervisedActivitySummary=false
 EnableSupervisedRESpeckReadings=true
 EnableSupervisedAirspeckReadings=true
 
-# Whether the PCA graphs should be displayed in addition to the flow graph
+# Whether the volume (PCA) graph should be displayed in addition to the flow graph
 ShowPCAGraph=false
