Windmill fragment added Bug fixes for data storage

--- a/RESpeck.config
+++ b/RESpeck.config
@@ -19,15 +19,18 @@ StoreDataLocally=true
 StoreMergedFile=true
 
 # Which mode to show first. If only one mode is enabled, that one is shown, independent of this value.
-IsSupervisedStartingMode=true
+IsSupervisedStartingMode=false
 
 # Whether supervised mode and subject mode are enabled. One of the two has to be enabled.
-EnableSupervisedMode=true
-EnableSubjectMode=false
+EnableSupervisedMode=false
+EnableSubjectMode=true
 
 # If Airspeck is disabled, this disables the bluetooth search for the Airspeck and all Airspeck 
 # related Fragments, independent of the values set below. 
 EnableAirspeck=false
+
+# Do we store all Airspeck data or only the reliable ones, i.e. bin0, temperature, humidity etc.?
+StoreAllAirspeckFields=true
 
 # Enable/disable specific fragments (views)
 EnableSupervisedOverview=false
@@ -36,6 +39,9 @@ EnableSupervisedAQGraphs=false
 EnableSupervisedActivitySummary=false
 EnableSupervisedRESpeckReadings=true
 EnableSupervisedAirspeckReadings=true
+EnableSubjectHome=false
+EnableSubjectValues=false
+EnableSubjectWindmill=true
 
 # Whether the volume (PCA) graph should be displayed in addition to the flow graph
 ShowPCAGraph=false
