GPS values stored in Airspeck file.

--- a/RESpeck.config
+++ b/RESpeck.config
@@ -45,3 +45,6 @@ EnableSubjectWindmill=true
 
 # Whether the volume (PCA) graph should be displayed in addition to the flow graph
 ShowPCAGraph=false
+
+# Do we want to store GPS data if GPS is turned on in phone?
+EnableLocationStorage=true
