Added option to enable/disable dummy Airspeck data

--- a/RESpeck.config
+++ b/RESpeck.config
@@ -29,6 +29,9 @@ EnableSubjectMode=true
 # related Fragments, independent of the values set below. 
 EnableAirspeck=false
 
+# If Airspeck is not enabled, do we want to show dummy data?
+ShowDummyAirspeckData=false
+
 # Do we store all Airspeck data or only the reliable ones, i.e. bin0, temperature, humidity etc.?
 StoreAllAirspeckFields=true
 
