Preparing synchronised timestamps. Error message on screen instead of crash when config file cannot be loaded. If neither subject mode nor supervised mode are enabled in config, enable subject mode by default.

--- a/RESpeck.config
+++ b/RESpeck.config
@@ -1,5 +1,6 @@
 TabletSerial=Q8G12151102353
 RESpeckKey=hbNNpYX6e4WZ5PWgfXrpd8Tz8D6VmFDjCc2wYcy2
+RESpeckUUID=
 PatientID=1
 
 # This is ignored in current version. Was used to adjust the type display for the readings.
