GPS service. Dialog which prompts user to enable GPS every 20 seconds if storage of location data is set in Config (new option).

--- a/RESpeck.config
+++ b/RESpeck.config
@@ -50,5 +50,5 @@ EnableSubjectWindmill=true
 # Whether the volume (PCA) graph should be displayed in addition to the flow graph
 ShowPCAGraph=false
 
-# Do we want to store GPS data if GPS is turned on in phone?
-EnableLocationStorage=true
+# Do we want to store the location of the phone?
+EnablePhoneLocationStorage=true
