--- a/RESpeck.config
+++ b/RESpeck.config
@@ -30,6 +30,9 @@ EnableSubjectMode=true
 # related Fragments, independent of the values set below. 
 EnableAirspeck=false
 
+# Same with RESpeck. Enabled by default for compatibility reasons.
+DisableRESpeck=false
+
 # If Airspeck is not enabled, do we want to show dummy data?
 ShowDummyAirspeckData=false
 
@@ -52,3 +55,6 @@ ShowPCAGraph=false
 
 # Do we want to store the location of the phone?
 EnablePhoneLocationStorage=true
+
+# Show the volume recording option in the supervised mode settings
+EnableVolumeCalibration=true
