Live map showing pollution level. Phone location storage to separate directory. Phone location stored in Airspeck file if Airspeck doesn't have location information.

--- a/RESpeck.config
+++ b/RESpeck.config
@@ -46,6 +46,7 @@ EnableSupervisedAQGraphs=false
 EnableSupervisedActivitySummary=false
 EnableSupervisedRESpeckReadings=true
 EnableSupervisedAirspeckReadings=true
+EnableSupervisedAQMap=true
 EnableSubjectHome=false
 EnableSubjectValues=false
 EnableSubjectWindmill=true
