--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,41 +54,18 @@ buildscript {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.hamcrest:hamcrest-core:1.1'
-    testCompile 'org.hamcrest:hamcrest-integration:1.1'
-    testCompile 'org.hamcrest:hamcrest-library:1.1'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:support-v4:23.4.0'
-    compile 'com.android.support:design:23.4.0'
-    compile 'com.android.support:recyclerview-v7:23.4.0'
     // Retrofit REST client
-    compile 'com.google.code.gson:gson:2.6.2'
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     // Tape
-    compile 'com.squareup:tape:1.2.3'
-    compile 'io.reactivex:rxandroid:1.1.0'
-    compile 'io.reactivex:rxjava:1.1.0'
     // Kotlin
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     // Google location services
-    compile 'com.google.android.gms:play-services-location:10.0.1'
     // Active Android SQLite lib
-    compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     // Chart graphs
-    compile 'com.github.PhilJay:MPAndroidChart:v3.0.1'
     // FloatLabeledEditText
-    compile 'com.nineoldandroids:library:2.4.0'
     // CircularProgressBar
-    compile 'com.github.castorflex.smoothprogressbar:library-circular:1.2.0'
     // DateUtils
-    compile 'org.apache.commons:commons-lang3:3.0'
     // Multidex support
-    compile 'com.android.support:multidex:1.0.1'
     // PCA support
-    compile 'com.github.mkobos:pca_transform:1.0.1'
 
     // Crashlytics for getting crash reports remotely
     compile('com.crashlytics.sdk.android:crashlytics:2.6.1@aar') {
@@ -97,6 +74,30 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics-ndk:1.1.3@aar') {
         transitive = true;
     }
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.android.support:design:23.4.0'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.google.code.gson:gson:2.6.2'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    compile 'com.squareup:tape:1.2.3'
+    compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'io.reactivex:rxjava:1.1.0'
+    compile 'com.google.android.gms:play-services-location:10.0.1'
+    compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.1'
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.github.castorflex.smoothprogressbar:library-circular:1.2.0'
+    compile 'org.apache.commons:commons-lang3:3.0'
+    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.github.mkobos:pca_transform:1.0.1'
+    compile 'com.google.android.gms:play-services-maps:10.0.1'
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.hamcrest:hamcrest-core:1.1'
+    testCompile 'org.hamcrest:hamcrest-integration:1.1'
+    testCompile 'org.hamcrest:hamcrest-library:1.1'
 }
 
 crashlytics {
