--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,18 +7,23 @@ repositories {
 }
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion '25.0.2'
+    compileSdkVersion 25
+    buildToolsVersion '25.0.3'
 
     defaultConfig {
         applicationId "com.specknet.airrespeck"
         minSdkVersion 22
-        targetSdkVersion 23
-        versionCode 10
-        versionName "1.4.13"
+        targetSdkVersion 25
+        versionCode 14
+        versionName "1.4.14"
 
         // Enabling multidex support.
         multiDexEnabled true
+
+        // Java 8 support. Should be integrated into Android soon, so this can be removed.
+        jackOptions {
+            enabled true
+        }
     }
 
     buildTypes {
@@ -40,6 +45,10 @@ android {
     }
     lintOptions {
         abortOnError false
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
@@ -74,11 +83,11 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics-ndk:1.1.3@aar') {
         transitive = true;
     }
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:support-v4:23.4.0'
-    compile 'com.android.support:design:23.4.0'
-    compile 'com.android.support:recyclerview-v7:23.4.0'
-    compile 'com.google.code.gson:gson:2.6.2'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.google.code.gson:gson:2.7'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
@@ -98,6 +107,12 @@ dependencies {
     testCompile 'org.hamcrest:hamcrest-core:1.1'
     testCompile 'org.hamcrest:hamcrest-integration:1.1'
     testCompile 'org.hamcrest:hamcrest-library:1.1'
+
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile "com.polidea.rxandroidble:rxandroidble:1.2.2"
 }
 
 crashlytics {
