--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,19 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.22.1'
+    }
+}
+
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'io.fabric'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
+    jcenter()
 }
 
 android {
@@ -52,30 +62,9 @@ android {
     }
 }
 
-buildscript {
-    repositories {
-        maven { url 'https://maven.fabric.io/public' }
-    }
-    dependencies {
-        classpath 'io.fabric.tools:gradle:1.22.1'
-    }
-}
-
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    // Retrofit REST client
-    // Tape
-    // Kotlin
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    // Google location services
-    // Active Android SQLite lib
-    // Chart graphs
-    // FloatLabeledEditText
-    // CircularProgressBar
-    // DateUtils
-    // Multidex support
-    // PCA support
-
     // Crashlytics for getting crash reports remotely
     compile('com.crashlytics.sdk.android:crashlytics:2.6.1@aar') {
         transitive = true;
