Prepare config option filtering. OPC processing back to bytebuffer.

--- a/RESpeck.config
+++ b/RESpeck.config
@@ -58,3 +58,6 @@ EnablePhoneLocationStorage=true
 
 # Show the volume recording option in the supervised mode settings
 EnableVolumeCalibration=true
+
+# Do we want to disable post-filtering the breathing signal?
+DisablePostFilterBreathing=false
