working config file

--- a/RESpeck.config
+++ b/RESpeck.config
@@ -1,6 +1,7 @@
 TabletSerial=Q8G12151102353
 RESpeckKey=hbNNpYX6e4WZ5PWgfXrpd8Tz8D6VmFDjCc2wYcy2
-RESpeckUUID=
+RESpeckUUID=D3:53:09:12:80:A0
+QoEUUID=C1:0B:35:11:3F:16
 PatientID=1
 
 # This is ignored in current version. Was used to adjust the type display for the readings.
@@ -20,18 +21,18 @@ StoreDataLocally=true
 StoreMergedFile=true
 
 # Which mode to show first. If only one mode is enabled, that one is shown, independent of this value.
-IsSupervisedStartingMode=false
+IsSupervisedStartingMode=true
 
 # Whether supervised mode and subject mode are enabled. One of the two has to be enabled.
-EnableSupervisedMode=false
+EnableSupervisedMode=true
 EnableSubjectMode=true
 
 # If Airspeck is disabled, this disables the bluetooth search for the Airspeck and all Airspeck 
 # related Fragments, independent of the values set below. 
-EnableAirspeck=false
+EnableAirspeck=true
 
 # Same with RESpeck. Enabled by default for compatibility reasons.
-DisableRESpeck=false
+DisableRESpeck=true
 
 # If Airspeck is not enabled, do we want to show dummy data?
 ShowDummyAirspeckData=false
@@ -48,7 +49,7 @@ EnableSupervisedAirspeckReadings=true
 EnableSupervisedAQMap=true
 EnableSubjectHome=false
 EnableSubjectValues=false
-EnableSubjectWindmill=true
+EnableSubjectWindmill=false
 
 # Whether the volume (PCA) graph should be displayed in addition to the flow graph
 ShowPCAGraph=false
