Change gradle build file to bring down build time

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,7 +83,6 @@ dependencies {
     compile 'com.squareup:tape:1.2.3'
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'io.reactivex:rxjava:1.1.0'
-    compile 'com.google.android.gms:play-services-location:10.0.1'
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.1'
     compile 'com.nineoldandroids:library:2.4.0'
@@ -91,17 +90,13 @@ dependencies {
     compile 'org.apache.commons:commons-lang3:3.0'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.github.mkobos:pca_transform:1.0.1'
-    compile 'com.google.android.gms:play-services-maps:10.0.1'
+    compile 'com.google.android.gms:play-services-location:10.2.4'
+    compile 'com.google.android.gms:play-services-maps:10.2.4'
     testCompile 'junit:junit:4.12'
     testCompile 'org.hamcrest:hamcrest-core:1.1'
     testCompile 'org.hamcrest:hamcrest-integration:1.1'
     testCompile 'org.hamcrest:hamcrest-library:1.1'
-
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile "com.polidea.rxandroidble:rxandroidble:1.2.2"
+    compile 'com.polidea.rxandroidble:rxandroidble:1.2.2'
 }
 
 crashlytics {
