Refactorings and fixes. Separate config files for each project.

--- a/config_files/Daphne - RESpeck.config
+++ b/config_files/Daphne - RESpeck.config
@@ -1,14 +1,16 @@
-TabletSerial=Q8G12151102353
+#######################################
+# Different for each subject
+#######################################
+
+PatientID=1
+DeviceSerial=Q8G12151102353
 RESpeckKey=hbNNpYX6e4WZ5PWgfXrpd8Tz8D6VmFDjCc2wYcy2
 RESpeckUUID=D3:53:09:12:80:A0
 QoEUUID=C1:0B:35:11:3F:16
-PatientID=1
 
-# This is ignored in current version. Was used to adjust the type display for the readings.
-PatientAge=23
-
-# 0 is Researcher, 1 is subject. This is ignored in current version.
-UserType=0
+#######################################
+# Same for all subjects in one project
+#######################################
 
 # Upload data to server?
 UploadToServer=false
@@ -21,7 +23,7 @@ StoreDataLocally=true
 StoreMergedFile=true
 
 # Which mode to show first. If only one mode is enabled, that one is shown, independent of this value.
-IsSupervisedStartingMode=true
+IsSupervisedStartingMode=false
 
 # Whether supervised mode and subject mode are enabled. One of the two has to be enabled.
 EnableSupervisedMode=true
@@ -32,7 +34,7 @@ EnableSubjectMode=true
 EnableAirspeck=true
 
 # Same with RESpeck. Enabled by default for compatibility reasons.
-DisableRESpeck=true
+DisableRESpeck=false
 
 # If Airspeck is not enabled, do we want to show dummy data?
 ShowDummyAirspeckData=false
@@ -42,13 +44,13 @@ StoreAllAirspeckFields=true
 
 # Enable/disable specific fragments (views)
 EnableSupervisedOverview=false
-EnableSupervisedAQGraphs=false
-EnableSupervisedActivitySummary=false
+EnableSupervisedAQGraphs=true
+EnableSupervisedActivitySummary=true
 EnableSupervisedRESpeckReadings=true
 EnableSupervisedAirspeckReadings=true
 EnableSupervisedAQMap=true
-EnableSubjectHome=false
-EnableSubjectValues=false
+EnableSubjectHome=true
+EnableSubjectValues=true
 EnableSubjectWindmill=false
 
 # Whether the volume (PCA) graph should be displayed in addition to the flow graph
@@ -58,7 +60,7 @@ ShowPCAGraph=false
 EnablePhoneLocationStorage=true
 
 # Show the volume recording option in the supervised mode settings
-EnableVolumeCalibration=true
+EnableVolumeCalibration=false
 
 # Do we want to disable post-filtering the breathing signal?
 DisablePostFilterBreathing=false
