--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -139,7 +139,8 @@
         <activity
             android:name=".activities.MapsAQActivity"
             android:label="@string/title_activity_maps_aq"
-            android:parentActivityName=".activities.MainActivity">
+            android:parentActivityName=".activities.MainActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.specknet.airrespeck.activities.MainActivity"/>
