Added config to disable wrong orientation dialog. Fixed double bluetooth connection.

--- a/config_files/Daphne - RESpeck.config
+++ b/config_files/Daphne - RESpeck.config
@@ -54,3 +54,6 @@ EnableVolumeCalibration=false
 
 # Do we want to disable post-filtering the breathing signal?
 DisablePostFilterBreathing=false
+
+# Do we want to disable the wrong orientation dialog?
+DisableWrongOrientationDialog=false
