--- a/config_files/Everything - RESpeck.config
+++ b/config_files/Everything - RESpeck.config
@@ -54,3 +54,6 @@ EnableVolumeCalibration=true
 
 # Do we want to disable post-filtering the breathing signal?
 DisablePostFilterBreathing=false
+
+# Do we want to disable the wrong orientation dialog?
+DisableWrongOrientationDialog=false
